--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -30,7 +30,7 @@
 // ===== Modal
 .hmb-modalContent {
   position: relative;
-  padding: 1rem;
+  padding-top: 1rem;
 }
 
 .hmb-modalTitle {
