--- a/src/components/body/pages/portfolio/Portfolio.scss
+++ b/src/components/body/pages/portfolio/Portfolio.scss
@@ -17,11 +17,16 @@
   user-select: none;
 
   .hmb-portImageDisplay {
-    // height: 60vh;
-    box-shadow: 5px 5px 5px #00000047;
     flex-direction: column;
     object-fit: cover;
     width: 100%;
+    height: 81vh;
+    object-fit: contain;
+
+    &--small {
+      @extend .hmb-portImageDisplay;
+      max-height: 60vh;
+    }
   }
 
   .hmb-arrowCoverLeft {
@@ -162,5 +167,9 @@
 @media screen and (max-width: 525px) {
   .hmb-panels {
     width: 100% !important;
+  }
+
+  .hmb-flexContainer {
+    padding: 20px 0px;
   }
 }
