--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -166,7 +166,7 @@
             .hmb-menuBarNavigation {
               cursor: pointer;
               color: #ffffff;
-              font-weight: bold;
+              // font-weight: bold;
               font-size: 1em;
               line-height: 150%;
               letter-spacing: 2px;
